# provider

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test.yml
commonfate_provider/: access.py  args.py  dataclass.py  diagnostics.py  health.py  loader.py  namespace.py  provider.py  resources.py  schema.py  target.py  targets.py  tasks.py
commonfate_provider/cli/: main.py
commonfate_provider/config/: __init__.py  loaders.py
commonfate_provider/config/tests/: test_configurer.py  test_loaders.py
commonfate_provider/runtime/: __init__.py  aws_lambda.py  aws_lambda_entrypoint.py  initialise.py
commonfate_provider/runtime/tests/: aws_lambda_entrypoint_test.py  aws_lambda_test.py  initialise_test.py
commonfate_provider/runtime/tests/__snapshots__/aws_lambda_test/: test_grant_works.json  test_load_works.json  test_load_works_with_subtasks.json  test_provider_describe.json  test_provider_describe_with_config.json  (+2 more)
commonfate_provider/runtime/tests/commonfate_provider_dist/: README.md  manifest.json  provider.py
commonfate_provider/tests/: access_test.py  args_test.py  health_test.py  helper.py  provider_test.py  resources_test.py  schema_test.py  storage_test.py  target_test.py
commonfate_provider/tests/__snapshots__/health_test/: test_provider_config_validation_works.json
commonfate_provider/tests/__snapshots__/resources_test/: test_resource_schema_works.json  test_resource_schema_works_with_unnamed_resources.json
commonfate_provider/tests/__snapshots__/schema_test/: test_multiple_targets.json  test_schema_with_config.json  test_simple_schema.json
commonfate_provider/tests/__snapshots__/target_test/: test_export_target_resource_schema.json
provider/: __init__.py  access.py  health.py  namespace.py  resources.py  rpc.py  schema.py  target.py  tasks.py
provider/cli/: main.py
provider/config/: __init__.py
provider/config/tests/: test_configurer.py  test_loaders.py
provider/runtime/: __init__.py  aws_lambda.py  aws_lambda_entrypoint.py  initialise.py
provider/runtime/tests/: aws_lambda_entrypoint_test.py  aws_lambda_test.py  initialise_test.py
provider/runtime/tests/commonfate_provider_dist/: README.md  manifest.json
provider/runtime/tests/provider_example/: provider.py
provider/tests/: access_test.py  health_test.py  helper.py  provider_test.py  resources_test.py  schema_test.py  storage_test.py  target_test.py
provider/tests/__snapshots__/resources_test/: test_resource_schema_works.json
provider/tests/__snapshots__/schema_test/: test_multiple_targets.json  test_schema_with_config.json  test_simple_schema.json
provider/tests/__snapshots__/target_test/: test_export_target_schema.json
(+4 files in other folders)
