[tool.poetry]
name = "commonfate_provider"
version = "0.1.5"
description = "Python Provider Development kit"
authors = ["Chris Norman <chris@commonfate.io>", "Manish Chaulagain <manish@commonfate.io>", "Josh Wilkes <josh@commonfate.io>", "Jack Meyer <jack@commonfate.io>", "Jordi Hermoso <jordi@commonfate.io>"]
readme = "README.md"
packages = [{include = "commonfate_provider"}]
include = ["commonfate_provider/**/*.py"]
## TODO: Not excluding test from the build
exclude = ["commonfate_provider/tests/**"]

[tool.poetry.scripts]
commonfate-provider-py = "commonfate_provider.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
toml = "0.10.2"
pydantic = "1.10.2"
typing-extensions = "^4.5.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.1"
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
