[tool.poetry]
name = "provider"
version = "0.10.0"
description = "Common Fate Provider Development Kit"
authors = ["Common Fate <hello@commonfate.io>"]
readme = "README.md"
packages = [{include = "provider"}]
include = ["provider/**/*.py"]
## TODO: Not excluding test from the build
exclude = ["provider/tests/**"]

[tool.poetry.scripts]
provider = "provider.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
toml = "0.10.2"
pydantic = "^1.10.5"
typing-extensions = "^4.5.0"
click = "^8.1.3"
boto3 = "^1.26.82"
common-fate-schema = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.1"
black = {version = "^23.1.0", allow-prereleases = true}
syrupy = "^4.0.1"
botocore-types = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
